[tool.poetry]
name = "dz9"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
pandas = "^2.3.3"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
types-requests = "^2.32.4.20250913"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv",
    "tests",
]

[tool.black]
line-length = 119
exclude = '''
/\.git/
'''

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
